--- a/bs4/templates/bs4/index.html
+++ b/bs4/templates/bs4/index.html
@@ -33,7 +33,7 @@
                 </li>
                    <li class="nav-item ">
                     <a href="#" class="nav-link">
-                        <span class="fa fa-list fa-lg"></span>Menu
+                        <span class="fa fa-list fa-lg"></span>Menus
                     </a>
 
                 </li>
